fix(vercel): add COOP headers for auth popup and clean index.html

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,21 @@
         {
             "source": "/__/auth/(.*)",
             "destination": "https://ensayamos-4581f.firebaseapp.com/__/auth/$1"
+        },
+        {
+            "source": "/(.*)",
+            "destination": "/index.html"
+        }
+    ],
+    "headers": [
+        {
+            "source": "/(.*)",
+            "headers": [
+                {
+                    "key": "Cross-Origin-Opener-Policy",
+                    "value": "same-origin-allow-popups"
+                }
+            ]
         }
     ]
 }
